--- a/resume.tex
+++ b/resume.tex
@@ -47,11 +47,9 @@
 %     Profile
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{center}
-	\headerfirstnamestyle{Curriculum Vitae/Resume}
-	\headerlastnamestyle{Eashwar Mohan}
-	% \headerfirstnamestyle{Eashwar}  \headerlastnamestyle{Mohan} \\
+	\headerfirstnamestyle{Eashwar}  \headerlastnamestyle{Mohan} \\
 
-	{\color{darkgreen}{\bodyfont{Resume}}} | {\color{darkgreen}{\bodyfont{UMID 31216382}}} | {\color{darkgreen}{\bodyfont{SUGS MSE CSE}}} | {\color{darkgreen}{\faEnvelope\ \bodyfont{eashwar@umich.edu}}} | {\color{darkgreen}{\faMapMarker\ \bodyfont{Ann Arbor, MI}}} | {\color{darkgreen}{\faLink\ \bodyfont{eash.dev}}}
+	{\color{darkgreen}{\faEnvelope\ \bodyfont{eashwar@umich.edu}}} | {\color{darkgreen}{\faMapMarker\ \bodyfont{Ann Arbor, MI}}} | {\color{darkgreen}{\faLink\ \bodyfont{eash.dev}}}
 \end{center}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Education
@@ -65,37 +63,26 @@
 	{}
 	{September 2017-May 2020}
 	{\begin{cvitems}
-		\item{GPA: 3.810}
+		\item{GPA: 3.875}
 		\end{cvitems}}
 
-\vspace{-4mm}
-\cventry
-	{High School Dual Enrollment}
-	{Lansing Community College}
-	{}
-	{September 2016-April 2017}
-	{\begin{cvitems}
-		\item{GPA: 4.0. Courses Taken: Multivariable Calculus, Linear Algebra}
-		\end{cvitems}}
+% \vspace{-4mm}
+% \cventry
+% 	{High School Dual Enrollment}
+% 	{Lansing Community College}
+% 	{}
+% 	{September 2016-April 2017}
+% 	{\begin{cvitems}
+% 		\item{GPA: 4.0. Courses Taken: Multivariable Calculus, Linear Algebra}
+% 		\end{cvitems}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Employment
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-5mm}
+\vspace{-6mm}
 \cvsection{Employment}
 \vspace{-2mm}
 
-	\cventry
-	{Technical Lab Assistant}
-	{Crowds and Machines Lab at the University of Michigan}
-	{Ann Arbor, MI}
-	{January 2019 – Present}
-	{\begin{cvitems}
-		\item {Educate undergraduate researchers on various tools and skills, such as version control, and software architecture}
-		\item {Hold office hours to assist researchers with technical problems and create/maintain documentation for the lab.}
-	\end{cvitems}}
-
-	\vspace{-4mm}
 	\cventry
 	{Software Engineer Intern}
 	{Roblox Corporation}
@@ -110,6 +97,17 @@
 
 	\vspace{-4mm}
 	\cventry
+	{Technical Lab Assistant}
+	{Crowds and Machines Lab at the University of Michigan}
+	{Ann Arbor, MI}
+	{January 2019 – Present}
+	{\begin{cvitems}
+		\item {Educate undergraduate researchers on various tools and skills, such as version control, and software architecture}
+		\item {Hold office hours to assist researchers with technical problems and create/maintain documentation for the lab.}
+	\end{cvitems}}
+
+	\vspace{-4mm}
+	\cventry
 	{Software Engineer Intern}
 	{TechSmith Corporation}
 	{Okemos, MI}
@@ -119,29 +117,29 @@
 		\item {Implemented new features for Camtasia, using MFC (C++) and WPF (C\# + XAML).}
 	\end{cvitems}}
 
-	\vspace{-4mm}
-	\cventry
-	{Computer Consultant}
-	{University of Michigan Dental Informatics}
-	{Ann Arbor, MI}
-	{September 2017 – Present}
-	{\begin{cvitems}
-		\item {Assist dental faculty and students of the School of Dentistry over email, phone, and in-person with technological issues}
-		\item {File and assign tickets using the ITS and manage the Desktop Support front desk}
-		\end{cvitems}}
+	% \vspace{-4mm}
+	% \cventry
+	% {Computer Consultant}
+	% {University of Michigan Dental Informatics}
+	% {Ann Arbor, MI}
+	% {September 2017 – Present}
+	% {\begin{cvitems}
+	% 	\item {Assist dental faculty and students of the School of Dentistry over email, phone, and in-person with technological issues}
+	% 	\item {File and assign tickets using the ITS and manage the Desktop Support front desk}
+	% 	\end{cvitems}}
 
-	\vspace{-4mm}
-	\cventry
-	{Software Engineer Intern}
-	{Delta Dental of Michigan}
-	{Okemos, MI}
-	{June 2017 – August 2017}
-	{\begin{cvitems}
-		\item {Integrated Open ID Connect (OIDC)/SecureAuth with desktop and web applications}
-		\item {Designed and implemented a REST API using the Java Persistence API (JPA), and Enterprise JavaBeans (EJB)}
-		\end{cvitems}}
+	% \vspace{-4mm}
+	% \cventry
+	% {Software Engineer Intern}
+	% {Delta Dental of Michigan}
+	% {Okemos, MI}
+	% {June 2017 – August 2017}
+	% {\begin{cvitems}
+	% 	\item {Integrated Open ID Connect (OIDC)/SecureAuth with desktop and web applications}
+	% 	\item {Designed and implemented a REST API using the Java Persistence API (JPA), and Enterprise JavaBeans (EJB)}
+	% 	\end{cvitems}}
 
-\vspace{-5mm}
+\vspace{-6mm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Projects
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -158,20 +156,29 @@
 
 	\vspace{-6mm}
 	\cventry
-	{Control a level of Super Mario Bros. by playing the overworld theme on a MIDI keyboard. Made for MHacks 11.
-	 Made with pygame, pyautogui}
-	{Super MIDIo Bros.}
+	{A 3D, splitscreen multiplayer spaceship racing game. First place winner of the December 2019 University of Michigan Student Game Showcase.
+	 Made with Unity3D.}
+	{TURBONEON}
 	{GitHub: eashwar/super-midio-bros}
 	{}
 	{}
 
-	\vspace{-6mm}
-	\cventry
-	{Command line tool to control of basic Spotify playback in bash. Made with Express, Bash}
-	{now-playing: Spotify control for Bash}
-	{GitHub: eashwar/now-playing}
-	{}
-	{}
+	% \vspace{-6mm}
+	% \cventry
+	% {Control a level of Super Mario Bros. by playing the overworld theme on a MIDI keyboard. Made for MHacks 11.
+	%  Made with pygame, pyautogui}
+	% {Super MIDIo Bros.}
+	% {GitHub: eashwar/super-midio-bros}
+	% {}
+	% {}
+
+	% \vspace{-6mm}
+	% \cventry
+	% {Command line tool to control of basic Spotify playback in bash. Made with Express, Bash}
+	% {now-playing: Spotify control for Bash}
+	% {GitHub: eashwar/now-playing}
+	% {}
+	% {}
 	
 	\vspace{-6mm}
 	\cventry
@@ -194,7 +201,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Activities
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage
+% \newpage
 \vspace{-2mm}
 \cvsection{Activities}
 \vspace{-2mm}
@@ -237,21 +244,21 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Awards
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-1mm}
-\cvsection{Awards}
-\vspace{-2mm}
-	\cventry
-	{Recipient}
-	{Leinweber Software Scholarship}
-	{}
-	{January 2019 – Present}
-	{}
+% \vspace{-1mm}
+% \cvsection{Awards}
+% \vspace{-2mm}
+% 	\cventry
+% 	{Recipient}
+% 	{Leinweber Software Scholarship}
+% 	{}
+% 	{January 2019 – Present}
+% 	{}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Skills
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-6mm}
+% \vspace{-3mm}
 \cvsection{Skills}
 \vspace{-2mm}
 	\cventry
