--- a/resume.tex
+++ b/resume.tex
@@ -31,7 +31,7 @@
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
 %% Color for highlight
 % Define your custom color if you don't like awesome colors
-\colorlet{awesome}{green}
+\colorlet{awesome}{blurple}
 %\definecolor{awesome}{HTML}{CA63A8}
 %% Colors for text
 %\definecolor{darktext}{HTML}{414141}
@@ -49,7 +49,7 @@
 \begin{center}
 	\headerfirstnamestyle{Eashwar}  \headerlastnamestyle{Mohan} \\
 
-	{\color{darkgreen}{\faEnvelope\ \bodyfont{eashwar@umich.edu}}} | {\color{darkgreen}{\faMapMarker\ \bodyfont{Ann Arbor, MI}}} | {\color{darkgreen}{\faLink\ \bodyfont{eash.dev}}}
+	{\color{purple}{\faEnvelope\ \bodyfont{eashwar@umich.edu}}} | {\color{purple}{\faMapMarker\ \bodyfont{Ann Arbor, MI}}} | {\color{purple}{\faLink\ \bodyfont{eash.dev}}}
 \end{center}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Education
@@ -190,7 +190,7 @@
 	
 	\vspace{-6mm}
 	\cventry
-	{A personal website displaying a full list of past and current projects. Frameworks used: Bootstrap, Jekyll, JQuery, MathJax}
+	{A personal website displaying a full list of past and current projects. Frameworks used: Gatsby, ReactJS}
 	{Personal Website}
 	{eash.dev}
 	{}
