--- a/resume.tex
+++ b/resume.tex
@@ -159,7 +159,7 @@
 	{A 3D, splitscreen multiplayer spaceship racing game. First place winner of the December 2019 University of Michigan Student Game Showcase.
 	 Made with Unity3D.}
 	{TURBONEON}
-	{GitHub: eashwar/super-midio-bros}
+	{deem.itch.io/turboneon}
 	{}
 	{}
 
