--- a/resume.tex
+++ b/resume.tex
@@ -147,10 +147,10 @@
 \vspace{-2mm}
 
 	\cventry
-	{Music education puzzle game that teaches the player about drumming.
+	{Music education puzzle game that teaches the player about drumming and rhythmic intuition. Available on Android and online at projectlegato.com/game/.
 	 Made with Unity2D.}
 	{GridBeat}
-	{GitHub: projectlegato/projectlegato}
+	{GridBeat on Google Play Store}
 	{}
 	{}
 
