--- a/resume.tex
+++ b/resume.tex
@@ -182,9 +182,9 @@
 	
 	\vspace{-6mm}
 	\cventry
-	{Composed and arranged songs performed electronically and live using the DAW Reaper, piano, clarinet, and bass clarinet.}
+	{Songs made using the DAW Reaper, piano, clarinet, and bass clarinet.}
 	{Music Composition}
-	{soundcloud.com/eashw}
+	{eashwar.bandcamp.com}
 	{}
 	{}
 	
