push some unpushed changes

--- a/resume.tex
+++ b/resume.tex
@@ -58,12 +58,22 @@
 \cvsection{Education}
 \vspace{-2mm}
 \cventry
-	{BSE in Computer Science/Minor in Music}
+	{BSE in Computer Science/Minor in Music, Summa Cum Laude}
 	{University of Michigan - Ann Arbor}
 	{}
-	{September 2017-May 2020}
+	{Sept 2017 - May 2020}
 	{\begin{cvitems}
-		\item{GPA: 3.875}
+		\item{Degree Completed in 3 Years and Awarded With Highest Honors, GPA: 3.875}
+		\end{cvitems}}
+
+\vspace{-5mm}
+\cventry
+	{MSE in Computer Science}
+	{}
+	{}
+	{Sept 2020 - May 2021}
+	{\begin{cvitems}
+		\item{Part of Sequential Undergraduate/Graduate Studies program (SUGS)}
 		\end{cvitems}}
 
 % \vspace{-4mm}
@@ -84,10 +94,33 @@
 \vspace{-2mm}
 
 	\cventry
+	{Software Engineer Intern (2020), Camtasia Team}
+	{TechSmith Corporation}
+	{Okemos, MI}
+	{May 2020 – Aug 2020}
+	{\begin{cvitems}
+		\item {Enable Camtasia, the video editor and screen recording program, to work better on mixed-DPI multi-monitor workflows.}
+		\item {Localized Camtasia into various non-English languages.}
+	\end{cvitems}}
+
+	\vspace{-5mm}
+	\cventry
+	{Software Engineer Intern (2018), Camtasia Team}
+	{}
+	{}
+	{May 2018 – Aug 2018}
+	{\begin{cvitems}
+		\item {Mitigate security vulnerabilities related to zip files in Camtasia.}
+		\item {Complete various bugfixes and small feature requests.}
+		\item {\textit{(Both internships, worked with MFC and Win32 (C++), and WPF (C\#) technologies)}}
+	\end{cvitems}}
+
+	\vspace{-4mm}
+	\cventry
 	{Software Engineer Intern}
 	{Roblox Corporation}
 	{San Mateo, CA}
-	{June 2019 – August 2019}
+	{June 2019 – Aug 2019}
 	{\begin{cvitems}
 		\item {Designed and implemented a RESTful API in .NET currently receiving thousands of requests a second in production,
 		 which keeps track of dependencies between in-game assets on the Roblox game platform.}
@@ -95,27 +128,19 @@
 		Nomad and Vault, and Drone CI.}
 	\end{cvitems}}
 
-	\vspace{-4mm}
-	\cventry
-	{Technical Lab Assistant}
-	{Crowds and Machines Lab at the University of Michigan}
-	{Ann Arbor, MI}
-	{January 2019 – Present}
-	{\begin{cvitems}
-		\item {Educate undergraduate researchers on various tools and skills, such as version control, and software architecture}
-		\item {Hold office hours to assist researchers with technical problems and create/maintain documentation for the lab.}
-	\end{cvitems}}
+	
 
-	\vspace{-4mm}
-	\cventry
-	{Software Engineer Intern}
-	{TechSmith Corporation}
-	{Okemos, MI}
-	{May 2018 – August 2018}
-	{\begin{cvitems}
-		\item {Participated in updating Camtasia, a screen capture and video editing program.}
-		\item {Implemented new features for Camtasia, using MFC (C++) and WPF (C\# + XAML).}
-	\end{cvitems}}
+
+	% \vspace{-4mm}
+	% \cventry
+	% {Technical Lab Assistant}
+	% {Crowds and Machines Lab at the University of Michigan}
+	% {Ann Arbor, MI}
+	% {January 2019 – Present}
+	% {\begin{cvitems}
+	% 	\item {Educate undergraduate researchers on various tools and skills, such as version control, and software architecture}
+	% 	\item {Hold office hours to assist researchers with technical problems and create/maintain documentation for the lab.}
+	% \end{cvitems}}
 
 	% \vspace{-4mm}
 	% \cventry
@@ -206,7 +231,7 @@
 \cvsection{Activities}
 \vspace{-2mm}
 	\cventry
-	{Speaker/Director of Online Communications/Bandleader}
+	{Co-Founder and President/Speaker/Bandleader}
 	{Video Game Music Club}
 	{}
 	{January 2018 – Present}
@@ -218,10 +243,10 @@
 
 	\vspace{-4mm}
 	\cventry
-	{Treasurer (2018-Present) \& Webmaster (2019-Present)}
+	{Treasurer (2018-2020) \& Webmaster (2019-2021)}
 	{FIRST Alumni and Mentors Network at Michigan (FAMNM)}
 	{}
-	{September 2017 – Present}
+	{Sept 2017 – Present}
 	{\begin{cvitems}
 		\item {Fundraise over \$25,000 to establish an endowed scholarship for FIRST alumni at the University of Michigan}
 		\item {Draft and submit funding proposals to facilitate the improvement FAMNM events}
@@ -230,10 +255,10 @@
 	
 	\vspace{-4mm}
 	\cventry
-	{Web Team (2018-19) \& Bootcamp Lead (2019-Present)}
+	{Web Team (2018-19) \& Bootcamp Lead (2019-2020)}
 	{Michigan Hackers}
 	{}
-	{January 2018 – Present}
+	{Jan 2018 – May 2020}
 	{\begin{cvitems}
 		\item {Organize weekly presentations to introduce new CS students to concepts essential to academic and career success.}
 		\item {Topics include: version control, test-driven development, OOP and FP basics.}
