--- a/awesome-cv.cls
+++ b/awesome-cv.cls
@@ -639,7 +639,8 @@
 \newenvironment{cvitems}{
   \vspace{-4mm}
   \begin{justify}
-  \begin{itemize}[leftmargin=2ex, nosep, noitemsep]
+  \begin{itemize}[leftmargin=-3.5em, nosep, noitemsep]
+    \setlength{\parindent}{0pt}
     \setlength{\parskip}{0pt}
     \renewcommand{\labelitemi}{\bullet}
 }{
