--- a/resume.tex
+++ b/resume.tex
@@ -49,7 +49,7 @@
 \begin{center}
 	\headerfirstnamestyle{Eashwar}  \headerlastnamestyle{Mohan} \\
 
-	{\color{purple}{\faEnvelope\ \bodyfont{eashwar@umich.edu}}} | {\color{purple}{\faMapMarker\ \bodyfont{Ann Arbor, MI}}} | {\color{purple}{\faLink\ \bodyfont{eash.dev}}}
+	{\color{purple}{\faEnvelope\ \bodyfont{eashwar@umich.edu}}} | {\color{purple}{\faMapMarker\ \bodyfont{San Mateo, CA}}} | {\color{purple}{\faLink\ \bodyfont{eash.dev}}}
 \end{center}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Education
@@ -73,7 +73,7 @@
 	{}
 	{Sept 2020 - May 2021}
 	{\begin{cvitems}
-		\item{Part of Sequential Undergraduate/Graduate Studies program (SUGS)}
+		\item{GPA: 3.818, Part of Sequential Undergraduate/Graduate Studies program (SUGS)}
 		\end{cvitems}}
 
 % \vspace{-4mm}
@@ -93,13 +93,48 @@
 \cvsection{Employment}
 \vspace{-2mm}
 
+	
+	% \cventry
+	% {Graduate Student Instructor, EECS 494: Game Development}
+	% {University of Michigan}
+	% {Ann Arbor, MI}
+	% {August 2020 – Present}
+	% {\begin{cvitems}
+	% 	\item {Lead weekly discussion sections over auxiliary course material to help students make games in Unity.}
+	% 	\item {Manage office hours, a virtual forum board, moderate virtual lecture, and grade assignments.}
+	% \end{cvitems}}
+
+	% \vspace{-4mm}
+	\cventry
+	{Software Engineer}
+	{Roblox Corporation}
+	{San Mateo, CA}
+	{Aug 2021 - Present}
+	{\begin{cvitems}
+		\item{Working as a backend engineer on the Roblox platform.}
+	\end{cvitems}}
+
+	\vspace{-5mm}
+	\cventry
+	{Software Engineer Intern}
+	{}
+	{}
+	{June 2019 – Aug 2019}
+	{\begin{cvitems}
+		\item {Designed and implemented a RESTful API in .NET currently receiving thousands of requests a second in production,
+		 which keeps track of dependencies between in-game assets on the Roblox game platform.}
+		\item {Beta tested a development workflow in Docker Compose, Hashicorp 
+		Nomad and Vault, and Drone CI.}
+	\end{cvitems}}
+
+	\vspace{-4mm}
 	\cventry
 	{Software Engineer Intern (2020), Camtasia Team}
 	{TechSmith Corporation}
 	{Okemos, MI}
 	{May 2020 – Aug 2020}
 	{\begin{cvitems}
-		\item {Enable Camtasia, the video editor and screen recording program, to work better on mixed-DPI multi-monitor workflows.}
+		\item {Enabled Camtasia, the video editor and screen recording program, to work better on mixed-DPI multi-monitor workflows.}
 		\item {Localized Camtasia into various non-English languages.}
 	\end{cvitems}}
 
@@ -110,26 +145,10 @@
 	{}
 	{May 2018 – Aug 2018}
 	{\begin{cvitems}
-		\item {Mitigate security vulnerabilities related to zip files in Camtasia.}
-		\item {Complete various bugfixes and small feature requests.}
-		\item {\textit{(Both internships, worked with MFC and Win32 (C++), and WPF (C\#) technologies)}}
+		\item {Mitigated security vulnerabilities related to zip files in Camtasia.}
+		\item {Completed various bugfixes and small feature requests.}
+		% \item {\textit{(Both internships, worked with MFC and Win32 (C++), and WPF (C\#) technologies)}}
 	\end{cvitems}}
-
-	\vspace{-4mm}
-	\cventry
-	{Software Engineer Intern}
-	{Roblox Corporation}
-	{San Mateo, CA}
-	{June 2019 – Aug 2019}
-	{\begin{cvitems}
-		\item {Designed and implemented a RESTful API in .NET currently receiving thousands of requests a second in production,
-		 which keeps track of dependencies between in-game assets on the Roblox game platform.}
-		\item {Beta test a development workflow in Docker Compose, Hashicorp 
-		Nomad and Vault, and Drone CI.}
-	\end{cvitems}}
-
-	
-
 
 	% \vspace{-4mm}
 	% \cventry
@@ -147,7 +166,7 @@
 	% {Computer Consultant}
 	% {University of Michigan Dental Informatics}
 	% {Ann Arbor, MI}
-	% {September 2017 – Present}
+	% {September 2017 – May 2019}
 	% {\begin{cvitems}
 	% 	\item {Assist dental faculty and students of the School of Dentistry over email, phone, and in-person with technological issues}
 	% 	\item {File and assign tickets using the ITS and manage the Desktop Support front desk}
@@ -215,7 +234,7 @@
 	
 	\vspace{-6mm}
 	\cventry
-	{A personal website displaying a full list of past and current projects. Frameworks used: Gatsby, ReactJS}
+	{A personal website displaying a full list of past and current projects. Single-page-app implemented by hand in JavaScript.}
 	{Personal Website}
 	{eash.dev}
 	{}
@@ -238,7 +257,6 @@
 	{\begin{cvitems}
 		\item {Lead discussions and workshops on video game music analysis, music theory, composition, and music production}
 		\item {Manage mailing lists, online calendar, Discord server, and social media for the club}
-		\item {Arrange popular video game music for perfomance by the club ensemble.}
 		\end{cvitems}}
 
 	\vspace{-4mm}
@@ -248,21 +266,21 @@
 	{}
 	{Sept 2017 – Present}
 	{\begin{cvitems}
-		\item {Fundraise over \$25,000 to establish an endowed scholarship for FIRST alumni at the University of Michigan}
-		\item {Draft and submit funding proposals to facilitate the improvement FAMNM events}
-		\item {Maintain the frontend and backend of the club website located at https://famnm.club}
+		\item {Fundraised over \$25,000 to establish an endowed scholarship for FIRST alumni at the University of Michigan}
+		\item {Drafted and submitted funding proposals to facilitate the improvement FAMNM events}
+		\item {Maintained the frontend and backend of the club website (https://famnm.club)}
 		\end{cvitems}}
 	
 	\vspace{-4mm}
 	\cventry
-	{Web Team (2018-19) \& Bootcamp Lead (2019-2020)}
+	{Web Team (2018-19) \& Bootcamp Lead (2019-2020) \& Senior Advisor (2020-2021)}
 	{Michigan Hackers}
 	{}
-	{Jan 2018 – May 2020}
+	{Jan 2018 – Present}
 	{\begin{cvitems}
-		\item {Organize weekly presentations to introduce new CS students to concepts essential to academic and career success.}
+		\item {Organized weekly presentations to introduce new CS students to concepts essential to academic and career success.}
 		\item {Topics include: version control, test-driven development, OOP and FP basics.}
-		\item {Develop the back-end for the Michigan Hackers website (michiganhackers.org) using Gin, a Golang framework.}
+		\item {Developed the front-end and back-end for michiganhackers.org using ReactJS and Gin, a Golang framework.}
 		\end{cvitems}}
 	\vspace{-4mm}
 
@@ -287,35 +305,26 @@
 \cvsection{Skills}
 \vspace{-2mm}
 	\cventry
-	{}
+	{C++, Java, JavaScript, Python, C\#, Go, XML, XAML, SQL, HTML/CSS, Markdown, LaTeX}
 	{Languages}
 	{}
 	{}
-	{\begin{cvitems}
-		\vspace{-7mm}
-		\item {C++, Java, JavaScript, Python, C\#, Go, XML, XAML, SQL, HTML/CSS, Markdown, LaTeX}
-		\end{cvitems}}
+	{}
 
 	\vspace{-8mm}
 	\cventry
-	{}
+	{Git, Bash scripting, PowerShell scripting, Windows, OSX, Linux}
 	{Tools/OSes}
 	{}
 	{}
-	{\begin{cvitems}
-		\vspace{-7mm}
-		\item {Git, Bash scripting, PowerShell scripting, Windows Subsystem for Linux (WSL), Windows, OSX, Linux}
-		\end{cvitems}}
+	{}
 	
 	\vspace{-8mm}
 	\cventry
-	{}
+	{Reaper, Ableton, Clarinet (12 years), Piano (16 years), Composition (7 years)}
 	{Music}
 	{}
 	{}
-	{\begin{cvitems}
-		\vspace{-7mm}
-		\item {Cockos Reaper, Avid Pro Tools, MIDI sequencing, Clarinet Family (8 years), Piano (12 years), Composition (3 years)}
-		\end{cvitems}}
+	{}
 	\vspace{-4mm}
 \end{document}
