update with more details on job

--- a/resume.tex
+++ b/resume.tex
@@ -106,12 +106,14 @@
 
 	% \vspace{-4mm}
 	\cventry
-	{Software Engineer}
+	{Software Engineer, Content Platform}
 	{Roblox Corporation}
 	{San Mateo, CA}
 	{Aug 2021 - Present}
 	{\begin{cvitems}
-		\item{Working as a backend engineer on the Roblox platform.}
+		\item{Working as a backend engineer to support the multi-billion collection of assets which enable the experiences on the platform.}
+		\item{Design, implement, and maintain C\#/.NET REST and gRPC APIs and work to decompose an old, monolithic codebase to a microservice architecture.}
+		\item{Utilize the Hashicorp suite of tools (Nomad, Consul, Terraform, Vault) as well as Docker to create an effective and agile microservice deployment framework.}
 	\end{cvitems}}
 
 	\vspace{-5mm}
@@ -198,14 +200,14 @@
 	{}
 	{}
 
-	\vspace{-6mm}
-	\cventry
-	{A 3D, splitscreen multiplayer spaceship racing game. First place winner of the December 2019 University of Michigan Student Game Showcase.
-	 Made with Unity3D.}
-	{TURBONEON}
-	{deem.itch.io/turboneon}
-	{}
-	{}
+	% \vspace{-6mm}
+	% \cventry
+	% {A 3D, splitscreen multiplayer spaceship racing game. First place winner of the December 2019 University of Michigan Student Game Showcase.
+	%  Made with Unity3D.}
+	% {TURBONEON}
+	% {deem.itch.io/turboneon}
+	% {}
+	% {}
 
 	% \vspace{-6mm}
 	% \cventry
