--- a/resume.tex
+++ b/resume.tex
@@ -49,8 +49,126 @@
 \begin{center}
 	\headerfirstnamestyle{Eashwar}  \headerlastnamestyle{Mohan} \\
 
-	{\color{purple}{\faEnvelope\ \bodyfont{eashwar@umich.edu}}} | {\color{purple}{\faMapMarker\ \bodyfont{San Mateo, CA}}} | {\color{purple}{\faLink\ \bodyfont{eash.dev}}}
+	{\color{purple}{\faEnvelope\ \bodyfont{eash@eash.dev}}} | {\color{purple}{\faMapMarker\ \bodyfont{San Francisco, CA}}} | {\color{purple}{\faLink\ \bodyfont{eash.dev}}}
 \end{center}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     Employment
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{-6mm}
+\cvsection{Employment}
+\vspace{-2mm}
+
+	
+	% \cventry
+	% {Graduate Student Instructor, EECS 494: Game Development}
+	% {University of Michigan}
+	% {Ann Arbor, MI}
+	% {August 2020 – Present}
+	% {\begin{cvitems}
+	% 	\item {Lead weekly discussion sections over auxiliary course material to help students make games in Unity.}
+	% 	\item {Manage office hours, a virtual forum board, moderate virtual lecture, and grade assignments.}
+	% \end{cvitems}}
+
+	% \vspace{-4mm}
+	\cventry
+	{Senior Software Engineer, Engineering Efficiency}
+	{Roblox Corporation}
+	{San Mateo, CA}
+	{Sep 2024 - Present}
+	{}
+
+	\vspace{-7mm}
+	\cventry
+	{Software Engineer, Engineering Efficiency}
+	{}
+	{}
+	{Aug 2023 - Sep 2024}
+	{\begin{cvitems}
+		\item{Direct and manage the reliability program for Roblox's internal testing and staging environments used by engineers, QA, and designers, authoring training material, cross-functional process runbooks, and escalation policies. To date, reduce incident rate by over 70\%, MTTM by over 85\%, and help save tens of thousands of hours in developer and QA productivity.}
+		\item{Administrate and deploy third-party developer tools for source code management and continuous integration tooling at the company, including GitHub Enterprise (both Cloud and Server), self-hosted GitHub Actions agents and Sourcegraph, as well as build in-house suite of tooling for automation, management, and permission security.}
+		\item{Implement novel microsevice canary testing mechanisms for HTTP and gRPC services to enable the rollout of continous deployment to Roblox backend teams.}
+	\end{cvitems}}
+
+	\vspace{-5mm}
+	\cventry
+	{Software Engineer, Content Platform}
+	{}
+	{}
+	{Aug 2021 - Aug 2023}
+	{\begin{cvitems}
+		\item{Architected, implemented, and maintained an ecosystem of over 25 high throughput C\# gRPC and HTTP microservices (> 10m QPS at peak)  for the tens-of-billions user asset system behind Roblox's content platform.}
+		\item{Decomposed and migrated legacy monolithic Windows IIS systems (one instance = one machine) to containerized Linux services orchestrated on Nomad.}
+		\item{Designed and executed a full-stack design for a new React web frontend and asynchronous AWS SQS queue-based backend pipeline for user generated content upload.}
+	\end{cvitems}}
+
+	\vspace{-5mm}
+	\cventry
+	{Software Engineer Intern, Developer Services}
+	{}
+	{}
+	{June 2019 – Aug 2019}
+	{\begin{cvitems}
+		\item {Designed and implemented .NET REST API to keep track of dependencies between in-game assets on the Roblox game platform.}
+		\item {Beta tested a development workflow in Docker Compose, deploying to Hashicorp Nomad and Vault.}
+	\end{cvitems}}
+
+	% \vspace{-4mm}
+	% \cventry
+	% {Software Engineer Intern (2020), Camtasia Team}
+	% {TechSmith Corporation}
+	% {Okemos, MI}
+	% {May 2020 – Aug 2020}
+	% {\begin{cvitems}
+	% 	\item {Enabled Camtasia, the video editor and screen recording program, to work better on mixed-DPI multi-monitor workflows.}
+	% 	\item {Localized Camtasia into various non-English languages.}
+	% \end{cvitems}}
+
+	% \vspace{-5mm}
+	% \cventry
+	% {Software Engineer Intern (2018), Camtasia Team}
+	% {}
+	% {}
+	% {May 2018 – Aug 2018}
+	% {\begin{cvitems}
+	% 	\item {Mitigated security vulnerabilities related to zip files in Camtasia.}
+	% 	\item {Completed various bugfixes and small feature requests.}
+	% 	% \item {\textit{(Both internships, worked with MFC and Win32 (C++), and WPF (C\#) technologies)}}
+	% \end{cvitems}}
+
+	% \vspace{-4mm}
+	% \cventry
+	% {Technical Lab Assistant}
+	% {Crowds and Machines Lab at the University of Michigan}
+	% {Ann Arbor, MI}
+	% {January 2019 – Present}
+	% {\begin{cvitems}
+	% 	\item {Educate undergraduate researchers on various tools and skills, such as version control, and software architecture}
+	% 	\item {Hold office hours to assist researchers with technical problems and create/maintain documentation for the lab.}
+	% \end{cvitems}}
+
+	% \vspace{-4mm}
+	% \cventry
+	% {Computer Consultant}
+	% {University of Michigan Dental Informatics}
+	% {Ann Arbor, MI}
+	% {September 2017 – May 2019}
+	% {\begin{cvitems}
+	% 	\item {Assist dental faculty and students of the School of Dentistry over email, phone, and in-person with technological issues}
+	% 	\item {File and assign tickets using the ITS and manage the Desktop Support front desk}
+	% 	\end{cvitems}}
+
+	% \vspace{-4mm}
+	% \cventry
+	% {Software Engineer Intern}
+	% {Delta Dental of Michigan}
+	% {Okemos, MI}
+	% {June 2017 – August 2017}
+	% {\begin{cvitems}
+	% 	\item {Integrated Open ID Connect (OIDC)/SecureAuth with desktop and web applications}
+	% 	\item {Designed and implemented a REST API using the Java Persistence API (JPA), and Enterprise JavaBeans (EJB)}
+	% 	\end{cvitems}}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Education
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -86,119 +204,22 @@
 % 		\item{GPA: 4.0. Courses Taken: Multivariable Calculus, Linear Algebra}
 % 		\end{cvitems}}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     Employment
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-6mm}
-\cvsection{Employment}
-\vspace{-2mm}
 
-	
-	% \cventry
-	% {Graduate Student Instructor, EECS 494: Game Development}
-	% {University of Michigan}
-	% {Ann Arbor, MI}
-	% {August 2020 – Present}
-	% {\begin{cvitems}
-	% 	\item {Lead weekly discussion sections over auxiliary course material to help students make games in Unity.}
-	% 	\item {Manage office hours, a virtual forum board, moderate virtual lecture, and grade assignments.}
-	% \end{cvitems}}
 
-	% \vspace{-4mm}
-	\cventry
-	{Software Engineer, Content Platform}
-	{Roblox Corporation}
-	{San Mateo, CA}
-	{Aug 2021 - Present}
-	{\begin{cvitems}
-		\item{Working as a backend engineer to support the multi-billion collection of assets which enable the experiences on the platform.}
-		\item{Design, implement, and maintain C\#/.NET REST and gRPC APIs and work to decompose an old, monolithic codebase to a microservice architecture.}
-		\item{Utilize the Hashicorp suite of tools (Nomad, Consul, Terraform, Vault) as well as Docker to create an effective and agile microservice deployment framework.}
-	\end{cvitems}}
-
-	\vspace{-5mm}
-	\cventry
-	{Software Engineer Intern}
-	{}
-	{}
-	{June 2019 – Aug 2019}
-	{\begin{cvitems}
-		\item {Designed and implemented a RESTful API in .NET currently receiving thousands of requests a second in production,
-		 which keeps track of dependencies between in-game assets on the Roblox game platform.}
-		\item {Beta tested a development workflow in Docker Compose, Hashicorp 
-		Nomad and Vault, and Drone CI.}
-	\end{cvitems}}
-
-	\vspace{-4mm}
-	\cventry
-	{Software Engineer Intern (2020), Camtasia Team}
-	{TechSmith Corporation}
-	{Okemos, MI}
-	{May 2020 – Aug 2020}
-	{\begin{cvitems}
-		\item {Enabled Camtasia, the video editor and screen recording program, to work better on mixed-DPI multi-monitor workflows.}
-		\item {Localized Camtasia into various non-English languages.}
-	\end{cvitems}}
-
-	\vspace{-5mm}
-	\cventry
-	{Software Engineer Intern (2018), Camtasia Team}
-	{}
-	{}
-	{May 2018 – Aug 2018}
-	{\begin{cvitems}
-		\item {Mitigated security vulnerabilities related to zip files in Camtasia.}
-		\item {Completed various bugfixes and small feature requests.}
-		% \item {\textit{(Both internships, worked with MFC and Win32 (C++), and WPF (C\#) technologies)}}
-	\end{cvitems}}
-
-	% \vspace{-4mm}
-	% \cventry
-	% {Technical Lab Assistant}
-	% {Crowds and Machines Lab at the University of Michigan}
-	% {Ann Arbor, MI}
-	% {January 2019 – Present}
-	% {\begin{cvitems}
-	% 	\item {Educate undergraduate researchers on various tools and skills, such as version control, and software architecture}
-	% 	\item {Hold office hours to assist researchers with technical problems and create/maintain documentation for the lab.}
-	% \end{cvitems}}
-
-	% \vspace{-4mm}
-	% \cventry
-	% {Computer Consultant}
-	% {University of Michigan Dental Informatics}
-	% {Ann Arbor, MI}
-	% {September 2017 – May 2019}
-	% {\begin{cvitems}
-	% 	\item {Assist dental faculty and students of the School of Dentistry over email, phone, and in-person with technological issues}
-	% 	\item {File and assign tickets using the ITS and manage the Desktop Support front desk}
-	% 	\end{cvitems}}
-
-	% \vspace{-4mm}
-	% \cventry
-	% {Software Engineer Intern}
-	% {Delta Dental of Michigan}
-	% {Okemos, MI}
-	% {June 2017 – August 2017}
-	% {\begin{cvitems}
-	% 	\item {Integrated Open ID Connect (OIDC)/SecureAuth with desktop and web applications}
-	% 	\item {Designed and implemented a REST API using the Java Persistence API (JPA), and Enterprise JavaBeans (EJB)}
-	% 	\end{cvitems}}
-
-\vspace{-6mm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Projects
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{-6mm}
 \cvsection{Projects}
 \vspace{-2mm}
 
-	\cventry
-	{Music education puzzle game that teaches the player about drumming and rhythmic intuition. Available on Android and online at projectlegato.com/game/.
-	 Made with Unity2D.}
-	{GridBeat}
-	{GridBeat on Google Play Store}
-	{}
-	{}
+	% \cventry
+	% {Music education puzzle game that teaches the player about drumming and rhythmic intuition. Available on Android and online at projectlegato.com/game/.
+	%  Made with Unity2D.}
+	% {GridBeat}
+	% {GridBeat on Google Play Store}
+	% {}
+	% {}
 
 	% \vspace{-6mm}
 	% \cventry
@@ -219,30 +240,40 @@
 	% {}
 
 	% \vspace{-6mm}
-	% \cventry
-	% {Command line tool to control of basic Spotify playback in bash. Made with Express, Bash}
-	% {now-playing: Spotify control for Bash}
-	% {GitHub: eashwar/now-playing}
-	% {}
-	% {}
 	
-	\vspace{-6mm}
 	\cventry
-	{Songs made using the DAW Reaper, piano, clarinet, and bass clarinet.}
-	{Music Composition}
-	{eashwar.bandcamp.com}
-	{}
-	{}
-	
-	\vspace{-6mm}
-	\cventry
-	{A personal website displaying a full list of past and current projects. Single-page-app implemented by hand in JavaScript.}
+	{Portfolio Website. Single-page-app implemented in raw JS (no libraries).}
 	{Personal Website}
 	{eash.dev}
 	{}
 	{}
+
+	\vspace{-6mm}
+	\cventry
+	{Scripts and automation for my self-hosted Kubernetes cluster on my home server.}
+	{Self Hosting scripts}
+	{github.com/eashwar/self-hosting}
+	{}
+	{}
+
+	\vspace{-6mm}
+	\cventry
+	{A suite of self-hosted TypeScript discord bots for a cooking community discord.}
+	{RMFPBot}
+	{github.com/SaltCellar-FOSS}
+	{}
+	{}
+
+	\vspace{-6mm}
+	\cventry
+	{Self-produced and recorded music.}
+	{Music Composition/Production}
+	{music.eash.dev}
+	{}
+	{}
 	
 	\vspace{-5mm}
+	
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Activities
@@ -252,39 +283,51 @@
 \cvsection{Activities}
 \vspace{-2mm}
 	\cventry
-	{Co-Founder and President/Speaker/Bandleader}
-	{Video Game Music Club}
+	{Co-Lead - Pride; Co-lead - RunClub; Co-lead - Indie Games Club}
+	{Employee Resource Groups Involvmement}
 	{}
-	{January 2018 – Present}
+	{January 2022 – Present}
 	{\begin{cvitems}
-		\item {Lead discussions and workshops on video game music analysis, music theory, composition, and music production}
-		\item {Manage mailing lists, online calendar, Discord server, and social media for the club}
+		\item {Coordinate and plan events for Roblox's LGBTQ+ employee group, including helping pioneer Roblox's first participatin in San Francisco Pride Parade.}
+		\item {Organize weekly running events for company run group.}
+		\item {Moderate monthly discussions of playthroughs of independently made video games.}
 		\end{cvitems}}
 
 	\vspace{-4mm}
-	\cventry
-	{Treasurer (2018-2020) \& Webmaster (2019-2021)}
-	{FIRST Alumni and Mentors Network at Michigan (FAMNM)}
-	{}
-	{Sept 2017 – Present}
-	{\begin{cvitems}
-		\item {Fundraised over \$25,000 to establish an endowed scholarship for FIRST alumni at the University of Michigan}
-		\item {Drafted and submitted funding proposals to facilitate the improvement FAMNM events}
-		\item {Maintained the frontend and backend of the club website (https://famnm.club)}
-		\end{cvitems}}
+	% \cventry
+	% {Co-Founder and President/Speaker/Bandleader}
+	% {Video Game Music Club}
+	% {}
+	% {January 2018 – Present}
+	% {\begin{cvitems}
+	% 	\item {Lead discussions and workshops on video game music analysis, music theory, composition, and music production}
+	% 	\item {Manage mailing lists, online calendar, Discord server, and social media for the club}
+	% 	\end{cvitems}}
+
+	% \vspace{-4mm}
+	% \cventry
+	% {Treasurer (2018-2020) \& Webmaster (2019-2021)}
+	% {FIRST Alumni and Mentors Network at Michigan (FAMNM)}
+	% {}
+	% {Sept 2017 – Present}
+	% {\begin{cvitems}
+	% 	\item {Fundraised over \$25,000 to establish an endowed scholarship for FIRST alumni at the University of Michigan}
+	% 	\item {Drafted and submitted funding proposals to facilitate the improvement FAMNM events}
+	% 	\item {Maintained the frontend and backend of the club website (https://famnm.club)}
+	% 	\end{cvitems}}
 	
-	\vspace{-4mm}
-	\cventry
-	{Web Team (2018-19) \& Bootcamp Lead (2019-2020) \& Senior Advisor (2020-2021)}
-	{Michigan Hackers}
-	{}
-	{Jan 2018 – Present}
-	{\begin{cvitems}
-		\item {Organized weekly presentations to introduce new CS students to concepts essential to academic and career success.}
-		\item {Topics include: version control, test-driven development, OOP and FP basics.}
-		\item {Developed the front-end and back-end for michiganhackers.org using ReactJS and Gin, a Golang framework.}
-		\end{cvitems}}
-	\vspace{-4mm}
+	% \vspace{-4mm}
+	% \cventry
+	% {Web Team (2018-19) \& Bootcamp Lead (2019-2020) \& Senior Advisor (2020-2021)}
+	% {Michigan Hackers}
+	% {}
+	% {Jan 2018 – Present}
+	% {\begin{cvitems}
+	% 	\item {Organized weekly presentations to introduce new CS students to concepts essential to academic and career success.}
+	% 	\item {Topics include: version control, test-driven development, OOP and FP basics.}
+	% 	\item {Developed the front-end and back-end for michiganhackers.org using ReactJS and Gin, a Golang framework.}
+	% 	\end{cvitems}}
+	% \vspace{-4mm}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Awards
@@ -304,29 +347,17 @@
 %     Skills
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \vspace{-3mm}
-\cvsection{Skills}
+\cvsection{Proficiencies and Skills}
 \vspace{-2mm}
 	\cventry
-	{C++, Java, JavaScript, Python, C\#, Go, XML, XAML, SQL, HTML/CSS, Markdown, LaTeX}
-	{Languages}
 	{}
 	{}
 	{}
+	{}
+	{\begin{cvitems}
+		\item {Languages: C\#/.NET, Terraform, Python, Golang, TypeScript/JavaScript, HTML5/CSS, YAML/XAML/JSON/TOML}
+		\item {Tooling: Git, GitHub, Docker, HCP Vault, Scripting (python, powershell, bash)}
+		\item {Music: Reaper, Ableton, Clarinet (15 years), Piano (18 years), Composition (10 years)}
+	\end{cvitems}}
 
-	\vspace{-8mm}
-	\cventry
-	{Git, Bash scripting, PowerShell scripting, Windows, OSX, Linux}
-	{Tools/OSes}
-	{}
-	{}
-	{}
-	
-	\vspace{-8mm}
-	\cventry
-	{Reaper, Ableton, Clarinet (12 years), Piano (16 years), Composition (7 years)}
-	{Music}
-	{}
-	{}
-	{}
-	\vspace{-4mm}
 \end{document}
